# swagger.json
@@ -5,18 +5,299 @@
     "description": "This API is a ...",
     "version": "1.0.0"
   },
-  "host": "cse341-project-2-1yyy.onrender.com/",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
-    "/professional": {
+    "/": {
       "get": {
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/api-docs/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/authors/": {
+      "get": {
+        "tags": [
+          "Authors"
+        ],
+        "summary": "Get all library Authors",
+        "description": "Retrieves a list of all Author books registered in the database.",
+        "responses": {
+          "200": {
+            "description": "A list of library authors retrieved successfully",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "firstName": {
+                    "type": "string",
+                    "example": "Samuel"
+                  },
+                  "lastName": {
+                    "type": "string",
+                    "example": "Clemens"
+                  },
+                  "pseudonym": {
+                    "type": "string",
+                    "example": "Mark Twain"
+                  },
+                  "birthDate": {
+                    "type": "string",
+                    "example": "1835-11-30"
+                  },
+                  "deathDate": {
+                    "type": "string",
+                    "example": "1910-04-21"
+                  },
+                  "nationality": {
+                    "type": "string",
+                    "example": "American"
+                  },
+                  "mainGenre": {
+                    "type": "string",
+                    "example": "Fiction"
+                  },
+                  "books": {
+                    "type": "array",
+                    "example": [
+                      "The Great Gatsby",
+                      "To Kill a Mockingbird"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "required": [
+                  "firstName",
+                  "lastName",
+                  "pseudonym"
+                ]
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal server error while retrieving the author list"
+          }
+        },
+        "security": [
+          {
+            "github_auth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Authors"
+        ],
+        "description": "Endpoint to create a new author in the database.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Author create data",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "pseudonym": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "birthDate": {
+                  "type": "string",
+                  "example": "1980-01-01"
+                },
+                "deathDate": {
+                  "type": "string",
+                  "example": "2020-01-01"
+                },
+                "nationality": {
+                  "type": "string",
+                  "example": "American"
+                },
+                "mainGenre": {
+                  "type": "string",
+                  "example": "Fiction"
+                },
+                "books": {
+                  "type": "array",
+                  "example": [
+                    "Book 1",
+                    "Book 2"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/authors/{author_id}": {
+      "get": {
+        "tags": [
+          "Authors"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "author_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Authors"
+        ],
+        "description": "Endpoint to update an existing author by its ID.",
+        "parameters": [
+          {
+            "name": "author_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Author update data",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "pseudonym": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "birthDate": {
+                  "type": "string",
+                  "example": "1980-01-01"
+                },
+                "deathDate": {
+                  "type": "string",
+                  "example": "2020-01-01"
+                },
+                "nationality": {
+                  "type": "string",
+                  "example": "American"
+                },
+                "mainGenre": {
+                  "type": "string",
+                  "example": "Fiction"
+                },
+                "books": {
+                  "type": "array",
+                  "example": [
+                    "Book 1",
+                    "Book 2"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Authors"
+        ],
+        "description": "Endpoint to delete an existing author by its ID.",
+        "parameters": [
+          {
+            "name": "author_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -167,9 +448,6 @@
           },
           "400": {
             "description": "Validation error in the provided data"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal server error"
@@ -339,9 +617,6 @@
           "400": {
             "description": "Validation error in the provided data"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -373,9 +648,6 @@
         "responses": {
           "200": {
             "description": "User deleted successfully. Returns an empty response body."
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "User not found. No deletion was performed."
@@ -517,9 +789,6 @@
           },
           "400": {
             "description": "Validation error in the provided data"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal server error"
@@ -674,9 +943,6 @@
           "400": {
             "description": "Validation error in the provided data"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -708,9 +974,6 @@
         "responses": {
           "200": {
             "description": "Book deleted successfully. Returns an empty response body."
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Book not found. No deletion was performed."
@@ -872,9 +1135,6 @@
           },
           "400": {
             "description": "Validation error in the provided data"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal server error"
@@ -1044,9 +1304,6 @@
           "400": {
             "description": "Validation error in the provided data"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -1079,9 +1336,6 @@
           "200": {
             "description": "Staff member deleted successfully. Returns an empty response body."
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Staff member not found. No deletion was performed."
           },
@@ -1094,16 +1348,6 @@
             "github_auth": []
           }
         ]
-      }
-    },
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
       }
     }
   }
